# rhipster

./: Cargo.toml  LICENSE  README.md
diesel/diesel_cli/: Cargo.toml
diesel/diesel_cli/src/: config.rs  database.rs  main.rs
diesel_cli_ext/: Cargo.toml
diesel_cli_ext/src/: main.rs  parse.rs
examples/: down.sql  up.sql
examples/demo/: Cargo.toml  Dockerfile  Rocket.toml
examples/demo/src/: main.rs  schema.rs
rhipster/: Cargo.toml
rhipster/src/: main.rs
rhipster/templates/main/: Cargo.toml  Dockerfile  Rocket.toml
rhipster/templates/main/src/: main.rs
