[workspace]

members = [
    "rhipster",
    "diesel_cli_ext",

    "diesel/diesel",
    "diesel/diesel_cli",
    "diesel/diesel_derives",
    "diesel/diesel_tests",
    "diesel/diesel_migrations",
    "diesel/diesel_migrations/migrations_internals",
    "diesel/diesel_migrations/migrations_macros",
    "diesel/diesel_dynamic_schema",
    "diesel/examples/mysql/all_about_inserts",
    "diesel/examples/mysql/getting_started_step_1",
    "diesel/examples/mysql/getting_started_step_2",
    "diesel/examples/mysql/getting_started_step_3",
    "diesel/examples/postgres/advanced-blog-cli",
    "diesel/examples/postgres/all_about_inserts",
    "diesel/examples/postgres/all_about_updates",
    "diesel/examples/postgres/getting_started_step_1",
    "diesel/examples/postgres/getting_started_step_2",
    "diesel/examples/postgres/getting_started_step_3",
    "diesel/examples/postgres/custom_types",
    "diesel/examples/sqlite/all_about_inserts",
    "diesel/examples/sqlite/getting_started_step_1",
    "diesel/examples/sqlite/getting_started_step_2",
    "diesel/examples/sqlite/getting_started_step_3",
]
