[workspace]

[package]
name = "##NAME##"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.7", features = ["postgres", "chrono"] }
env_logger = "0.8.4"
eureka-client = "0.0.4"
rocket_sync_db_pools = { version = "0.1.0-rc.1", default-features = false, features = ["diesel_postgres_pool"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0.126"
serde_json = "1.0.64"
sourcegen = "0.3.0"
